--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ django-model-utils==4.2.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 django-cors-headers==3.13.0
+rest_framework_jwt==1.11.0
